feat: portfolio responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,60 @@
 </head>
 
 <body>
-    
+    <!-- HEADER -->
+    <header class="ms_header">
+        <div class="container-fluid">
+        </div>
+    </header>
+
+    <!-- MAIN -->
+    <main>
+    <!-- HERO -->
+        <section class="ms_hero">
+            <div class="container">
+            </div>
+        </section>
+
+        <!-- PORTFOLIO SECTION -->
+        <section class="ms_portfolio">
+            <div class="container">
+                <h2 class="text-center">Portfolio</h2>
+                <div class="row g-3">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_house">
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6  col-lg-4">
+                        <div class="ms_cake">
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6  col-lg-4">
+                        <div class="ms_circus">
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_controller">
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_safety">
+
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="ms_submarine">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
 </body>
 </html>
