--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
                         </div>
                     </div>
-                    <div class="col-12 col-md-6  col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_cake">
 
                         </div>
                     </div>
-                    <div class="col-12 col-md-6  col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_circus">
 
                         </div>
@@ -63,6 +63,14 @@
                 </div>
             </div>
         </section>
+
+        <!-- ABOUT SECTION -->
+        <section class="about-section">
+            <div class="container">
+
+            </div>
+        </section>
+    
 
     </main>
 
