--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -19,7 +21,7 @@
 
     <!-- MAIN -->
     <main>
-    <!-- HERO -->
+        <!-- HERO -->
         <section class="ms_hero">
             <div class="container">
             </div>
@@ -29,7 +31,7 @@
         <section class="ms_portfolio">
             <div class="container">
                 <h2 class="text-center">Portfolio</h2>
-                <div class="row g-3">
+                <div class="row g-2">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_house">
 
@@ -65,14 +67,29 @@
         </section>
 
         <!-- ABOUT SECTION -->
-        <section class="about-section">
-            <div class="container">
-
+        <section class="ms_about-section">
+            <div class="ms_container">
+                <h2 class="text-center">ABOUT</h2>
+                <div class="container-fluid">
+                    <div class="row g-1">
+                        <div class="col-12 col-md-6">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis at nobis delectus
+                            veritatis earum, sapiente ullam inventore recusandae dolore quidem harum quasi, molestiae
+                            quisquam placeat aliquam aspernatur magnam distinctio pariatur.
+                        </div>
+                        <div class="col-12 col-md-6">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum rem architecto ab asperiores
+                            pariatur iusto esse qui soluta, deserunt, alias distinctio iure voluptatibus exercitationem
+                            officiis. Temporibus rem unde quo debitis!
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-    
+
 
     </main>
 
 </body>
+
 </html>
