feat: footer, fine creazione struttura

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
 
         <!-- PORTFOLIO SECTION -->
-        <section class="ms_portfolio">
+        <section class="ms_portfolio mt-5">
             <div class="container">
                 <h2 class="text-center">Portfolio</h2>
                 <div class="row g-2">
@@ -67,11 +67,11 @@
         </section>
 
         <!-- ABOUT SECTION -->
-        <section class="ms_about-section">
-            <div class="ms_container">
+        <section class="ms_about-section mt-5">
+            <div class="ms_container mx-auto">
                 <h2 class="text-center">ABOUT</h2>
-                <div class="container-fluid">
-                    <div class="row g-1">
+                <div class="container">
+                    <div class="row g-3">
                         <div class="col-12 col-md-6">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis at nobis delectus
                             veritatis earum, sapiente ullam inventore recusandae dolore quidem harum quasi, molestiae
@@ -87,7 +87,30 @@
             </div>
         </section>
 
+        <!-- CONTACT ME SECTION -->
+        <section class="contact-section">
+            <div class="container">
 
+            </div>
+        </section>
+
+        <!-- INFO SECTION -->
+        <section class="info-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FOOTER -->
+        <footer>
+            <div class="cotainer">
+
+            </div>
+        </footer>
     </main>
 
 </body>
