--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
 <body>
     <!-- HEADER -->
     <header class="ms_header">
-        <div class="container-fluid">
-        </div>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a class="navbar-brand text-light" href="#">START BOOTSTRAP</a>
+                <button class="navbar-toggler" type="button text-info" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse"                                          id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" aria-current="page" href="#">PORTFOLIO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- MAIN -->
@@ -24,6 +45,10 @@
         <!-- HERO -->
         <section class="ms_hero">
             <div class="container">
+                <img class="img-fluid" src="img/avatar.svg" alt="">
+                <div>
+                    ciao
+                </div>
             </div>
         </section>
 
@@ -34,32 +59,32 @@
                 <div class="row g-2">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_house">
-
+                            <img class="img-fluid" src="img/cabin.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_cake">
-
+                            <img class="img-fluid" src="img/cake.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_circus">
-
+                            <img class="img-fluid" src="img/circus.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_controller">
-
+                            <img class="img-fluid" src="img/game.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_safety">
-
+                            <img class="img-fluid" src="img/safe.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_submarine">
-
+                            <img class="img-fluid" src="img/submarine.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -67,9 +92,9 @@
         </section>
 
         <!-- ABOUT SECTION -->
-        <section class="ms_about-section mt-5">
+        <section class="ms_about-section mt-5 py-5">
             <div class="ms_container mx-auto">
-                <h2 class="text-center">ABOUT</h2>
+                <h2 class="text-center text text-light">ABOUT</h2>
                 <div class="container">
                     <div class="row g-3">
                         <div class="col-12 col-md-6">
@@ -105,14 +130,18 @@
             </div>
         </section>
 
-        <!-- FOOTER -->
-        <footer>
-            <div class="cotainer">
-
-            </div>
-        </footer>
     </main>
 
+    <!-- FOOTER -->
+    <footer>
+        <div class="cotainer">
+
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
