--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- HEADER -->
     <header class="ms_header">
-        <nav class="navbar navbar-expand-md navbar-expand-lg">
+        <nav class="navbar navbar-dark navbar-expand-md navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand text-light" href="#">START BOOTSTRAP</a>
                 <button class="navbar-toggler" type="button text-info" data-bs-toggle="collapse"
@@ -24,7 +24,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active text-light" aria-current="page" href="#">PORTFOLIO</a>
                         </li>
@@ -133,6 +133,10 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                     <textarea class="form-control ms_form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
+                <div class="mt-2">
+                    <a href="">Send</a>
+                </div>
+                
             </div>
         </section>
 
@@ -151,8 +155,12 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="cotainer">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-12"></div>
+                <div class="col-12"></div>
+                <div class="col-12"></div>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
