--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -110,11 +112,14 @@
                         </div>
                     </div>
                 </div>
+                <button class="mt-4 btn btn-success bg-transparent border-white mx-auto">
+                    <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href="">Download</a>
+                </button>
             </div>
         </section>
 
         <!-- CONTACT ME SECTION -->
-        <section class="contact-section mt-5">
+        <section class="ms_contact-section mt-5">
             <div class="container">
                 <h2 class="text-center">CONTACT ME</h2>
                 <div class="">
@@ -133,19 +138,35 @@
                     <label for="exampleFormControlTextarea1" class="form-label">Message</label>
                     <textarea class="form-control ms_form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-                <div class="mt-2">
-                    <a href="">Send</a>
-                </div>
-                
+                <button class="mt-2 btn btn-success
+                " id="ms_btn">
+                    <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href="">Send</a>
+                </button>
+
             </div>
         </section>
 
         <!-- INFO SECTION -->
-        <section class="info-section mt-5">
+        <section class="info-section mt-5 py-5">
             <div class="container">
-                <div class="row">
-                    <div class="col-12">
-
+                <div class="row text-white text-center">
+                    <div class="col-12 col-md-4">
+                        <h6>LOCATION</h6>
+                        <p>2215 Jhon Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h6>AROUND THE WEB</h6>
+                        <p>
+                            <i class="bi bi-facebook"></i>
+                            <i class="bi bi-google"></i>
+                            <i class="bi bi-twitter"></i>
+                            <i class="bi bi-linkedin"></i>
+                            </p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h6>ABOUT FREELANCER</h6>
+                        <p>Freelance is a free to use, open socurce Boostrap theme created by <span
+                                class="text-green">Start Boostrap</span>.</p>
                     </div>
                 </div>
             </div>
@@ -155,13 +176,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-12"></div>
-                <div class="col-12"></div>
-                <div class="col-12"></div>
-            </div>
-        </div>
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
