--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
         <!-- ABOUT SECTION -->
         <section class="ms_about-section mt-5 py-5">
-            <div class="ms_small_container mx-auto">
-                <h2 class="text-center text text-light">ABOUT</h2>
+            <div class="ms_small-container mx-auto">
+                <h2 class="text-center text-light">ABOUT</h2>
                 <div class="container">
                     <div class="row g-3">
                         <div class="col-12 col-md-6 text-light">
@@ -112,15 +112,15 @@
                         </div>
                     </div>
                 </div>
-                <button class="mt-4 btn btn-success bg-transparent border-white mx-auto">
-                    <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href="">Download</a>
+                <button class="mt-4 btn btn-success bg-transparent border-white ">
+                    <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href=""><i class="me-2 bi bi-download"></i>Download</a>
                 </button>
             </div>
         </section>
 
         <!-- CONTACT ME SECTION -->
-        <section class="ms_contact-section mt-5">
-            <div class="container">
+        <section class="n mt-5">
+            <div class="container ms_small-container">
                 <h2 class="text-center">CONTACT ME</h2>
                 <div class="">
                     <label for="exampleFormControlInput1" class="form-label">Name</label>
@@ -161,12 +161,12 @@
                             <i class="bi bi-google"></i>
                             <i class="bi bi-twitter"></i>
                             <i class="bi bi-linkedin"></i>
-                            </p>
+                        </p>
                     </div>
                     <div class="col-12 col-md-4">
                         <h6>ABOUT FREELANCER</h6>
                         <p>Freelance is a free to use, open socurce Boostrap theme created by <span
-                                class="text-green">Start Boostrap</span>.</p>
+                        class="text-green">Start Boostrap</span>.</p>
                     </div>
                 </div>
             </div>
@@ -176,7 +176,9 @@
 
     <!-- FOOTER -->
     <footer>
-
+        <p class="text-center text-white py-5">
+            Copyright <i class="bi bi-c-circle"></i> Your Website 2019
+        </p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
