--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 <img class="ms_img-hero img-fluid" src="img/avatar.svg" alt="">
                 <div class="text-light">
                     <h1>START BOOTSTRAP</h1>
+                    <div class="d-flex justify-content-center mb-4">
+                        <span class="ms_hr align-self-center"></span>
+                        <span><i class="bi bi-star-fill fs-6 "></i></span>
+                        <span class="ms_hr align-self-center"></span>
+                    </div>
                     <p>GRAPHIC ARTIST-WEB DESIGNER -ILLUSTRATOR</p>
                 </div>
             </div>
@@ -59,6 +64,11 @@
         <section class="ms_portfolio mt-5">
             <div class="container">
                 <h2 class="text-center">PORTFOLIO</h2>
+                <div class="d-flex justify-content-center mb-4">
+                    <span class="ms_hr bg-black align-self-center"></span>
+                    <span><i class="bi bi-star-fill fs-6 "></i></span>
+                    <span class="ms_hr bg-black align-self-center"></span>
+                </div>
                 <div class="row g-2">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_house">
@@ -97,7 +107,12 @@
         <!-- ABOUT SECTION -->
         <section class="ms_about-section mt-5 py-5">
             <div class="ms_small-container mx-auto">
-                <h2 class="text-center text-light">ABOUT</h2>
+                <h2 class="text-center text-light mb-4">ABOUT</h2>
+                <div class="d-flex justify-content-center mb-4">
+                    <span class="ms_hr align-self-center"></span>
+                    <span><i class="text-white bi bi-star-fill fs-6 "></i></span>
+                    <span class="ms_hr align-self-center"></span>
+                </div>
                 <div class="container">
                     <div class="row g-3">
                         <div class="col-12 col-md-6 text-light">
@@ -111,15 +126,18 @@
                             officiis. Temporibus rem unde quo debitis!
                         </div>
                     </div>
+                    <div class="text-center">
+                        <button class="mt-4 btn btn-success bg-transparent border-white">
+                            <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href=""><i class="me-2 bi bi-download"></i>Download</a>
+                        </button>
+                    </div>
                 </div>
-                <button class="mt-4 btn btn-success bg-transparent border-white ">
-                    <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href=""><i class="me-2 bi bi-download"></i>Download</a>
-                </button>
+                
             </div>
         </section>
 
         <!-- CONTACT ME SECTION -->
-        <section class="n mt-5">
+        <section class="mt-5">
             <div class="container ms_small-container">
                 <h2 class="text-center">CONTACT ME</h2>
                 <div class="">
@@ -142,7 +160,6 @@
                 " id="ms_btn">
                     <a class="text-white link-offset-2 link-underline link-underline-opacity-0" href="">Send</a>
                 </button>
-
             </div>
         </section>
 
@@ -157,16 +174,16 @@
                     <div class="col-12 col-md-4">
                         <h6>AROUND THE WEB</h6>
                         <p>
-                            <i class="bi bi-facebook"></i>
-                            <i class="bi bi-google"></i>
-                            <i class="bi bi-twitter"></i>
-                            <i class="bi bi-linkedin"></i>
+                            <i class="bi bi-facebook border rounded-circle px-2 py-1"></i>
+                            <i class="bi bi-google border rounded-circle px-2 py-1"></i>
+                            <i class="bi bi-twitter border rounded-circle px-2 py-1"></i>
+                            <i class="bi bi-linkedin border rounded-circle px-2 py-1"></i>
                         </p>
                     </div>
                     <div class="col-12 col-md-4">
                         <h6>ABOUT FREELANCER</h6>
                         <p>Freelance is a free to use, open socurce Boostrap theme created by <span
-                        class="text-green">Start Boostrap</span>.</p>
+                        class="ms_start">Start Boostrap</span>.</p>
                     </div>
                 </div>
             </div>
@@ -180,6 +197,8 @@
             Copyright <i class="bi bi-c-circle"></i> Your Website 2019
         </p>
     </footer>
+
+    <!-- SCRIPT JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
