fix: dettagli part 2 e fine progetto

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                     <h1>START BOOTSTRAP</h1>
                     <div class="d-flex justify-content-center mb-4">
                         <span class="ms_hr align-self-center"></span>
-                        <span><i class="bi bi-star-fill fs-6 "></i></span>
+                        <span><i class="bi bi-star-fill ms_star"></i></span>
                         <span class="ms_hr align-self-center"></span>
                     </div>
-                    <p>GRAPHIC ARTIST-WEB DESIGNER -ILLUSTRATOR</p>
+                    <p class="fs-5">GRAPHIC ARTIST-WEB DESIGNER -ILLUSTRATOR</p>
                 </div>
             </div>
         </section>
@@ -66,7 +66,7 @@
                 <h2 class="text-center">PORTFOLIO</h2>
                 <div class="d-flex justify-content-center mb-4">
                     <span class="ms_hr bg-black align-self-center"></span>
-                    <span><i class="bi bi-star-fill fs-6 "></i></span>
+                    <span><i class="bi bi-star-fill ms_star "></i></span>
                     <span class="ms_hr bg-black align-self-center"></span>
                 </div>
                 <div class="row g-2">
@@ -110,7 +110,7 @@
                 <h2 class="text-center text-light mb-4">ABOUT</h2>
                 <div class="d-flex justify-content-center mb-4">
                     <span class="ms_hr align-self-center"></span>
-                    <span><i class="text-white bi bi-star-fill fs-6 "></i></span>
+                    <span><i class="text-white bi bi-star-fill ms_star "></i></span>
                     <span class="ms_hr align-self-center"></span>
                 </div>
                 <div class="container">
@@ -140,6 +140,11 @@
         <section class="mt-5">
             <div class="container ms_small-container">
                 <h2 class="text-center">CONTACT ME</h2>
+                <div class="d-flex justify-content-center mb-4">
+                    <span class="ms_hr bg-black align-self-center"></span>
+                    <span><i class="bi bi-star-fill ms_star "></i></span>
+                    <span class="ms_hr bg-black align-self-center"></span>
+                </div>
                 <div class="">
                     <label for="exampleFormControlInput1" class="form-label">Name</label>
                     <input type="text" class="form-control ms_form-control" id="exampleFormControlInput1">
