--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- HEADER -->
-    <header class="ms_header">
+    <header class="ms_header fixed-top">
         <nav class="navbar navbar-dark navbar-expand-md navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand text-light" href="#">START BOOTSTRAP</a>
@@ -72,32 +72,32 @@
                 <div class="row g-2">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_house">
-                            <img class="img-fluid" src="img/cabin.png" alt="">
+                            <img class="img-fluid rounded" src="img/cabin.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_cake">
-                            <img class="img-fluid" src="img/cake.png" alt="">
+                            <img class="img-fluid rounded" src="img/cake.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_circus">
-                            <img class="img-fluid" src="img/circus.png" alt="">
+                            <img class="img-fluid rounded" src="img/circus.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_controller">
-                            <img class="img-fluid" src="img/game.png" alt="">
+                            <img class="img-fluid rounded" src="img/game.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_safety">
-                            <img class="img-fluid" src="img/safe.png" alt="">
+                            <img class="img-fluid rounded" src="img/safe.png" alt="">
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="ms_submarine">
-                            <img class="img-fluid" src="img/submarine.png" alt="">
+                            <img class="img-fluid rounded" src="img/submarine.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -146,20 +146,20 @@
                     <span class="ms_hr bg-black align-self-center"></span>
                 </div>
                 <div class="">
-                    <label for="exampleFormControlInput1" class="form-label">Name</label>
-                    <input type="text" class="form-control ms_form-control" id="exampleFormControlInput1">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control ms_form-control" id="name">
                 </div>
                 <div>
-                    <label for="exampleFormControlInput1" class="form-label">Email Address</label>
-                    <input type="email" class="form-control ms_form-control" id="exampleFormControlInput1">
+                    <label for="email" class="form-label">Email Address</label>
+                    <input type="email" class="form-control ms_form-control" id="email">
                 </div>
                 <div>
-                    <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
-                    <input type="number" class="form-control ms_form-control" id="exampleFormControlInput1">
+                    <label for="tel" class="form-label">Phone Number</label>
+                    <input type="number" class="form-control ms_form-control" id="tel">
                 </div>
                 <div>
-                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                    <textarea class="form-control ms_form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <label for="message" class="form-label">Message</label>
+                    <textarea class="form-control ms_form-control" id="message" rows="3"></textarea>
                 </div>
                 <button class="mt-2 btn btn-success
                 " id="ms_btn">
